[gd_scene load_steps=2 format=2]

[ext_resource path="res://Hud.gd" type="Script" id=1]

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
margin_left = 234.0
margin_top = 129.0
margin_right = 376.0
margin_bottom = 178.0
rect_scale = Vector2( 2, 2 )
text = "0"

[node name="Label2" type="Label" parent="."]
margin_left = 25.0
margin_top = 18.0
margin_right = 65.0
margin_bottom = 32.0
text = "dodge dan, nerd"

[node name="Button" type="Button" parent="."]
margin_left = 267.0
margin_top = 295.0
margin_right = 460.0
margin_bottom = 357.0
text = "START"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
